deployments/authentik/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik
  namespace: default
  labels:
    app: authentik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentik
  template:
    metadata:
      labels:
        app: authentik
    spec:
      containers:
        - name: server
          image: ghcr.io/goauthentik/server
          ports:
            - containerPort: 9000
            - containerPort: 9443
        - name: worker
          image: ghcr.io/goauthentik/server
      volumes:
        - name: authentik-data-data
          hostPath:
            path: /data
            type: Directory
        - name: authentik-data-templates
          hostPath:
            path: /templates
            type: Directory
        - name: authentik-data-certs
          hostPath:
            path: /certs
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: authetik-service
  namespace: default
spec:
  selector:
    app: server
  ports:
    - name: authetntik-port
      port: 80
      targetPort: 9000
