deployments/authentik/ingress.yaml
apiVersion: traefik.io/v3.7.6
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.gyurus.hu`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
